# framelcdoctor

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
amddrs/: CMakeLists.txt  amddrs_main.c
companion/: FrameLCDoctor.sln
companion/src/FrameLCDoctor.App/: App.xaml  App.xaml.cs  BottleneckMemory.cs  CorePipeClient.cs  CpuTopology.cs  DisplayInfo.cs  DriverOptimizer.cs  FrameLCDoctor.App.csproj  GpuInfo.cs  LauncherWindow.xaml  LauncherWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  SettingsAdvisor.cs  SysMetrics.cs  SystemOptimizer.cs  Upscaler.cs
companion/src/FrameLCDoctor.App/Launcher/: AntiCheat.cs  AutoPreset.cs  ConfigPreset.cs  EngineDetector.cs  GameProfile.cs  Injector.cs  Installer.cs  Minecraft.cs  PeAnalyzer.cs  SteamLibrary.cs
core/: CMakeLists.txt
core/classify/: headroom.cpp
core/hooks/: present_d3d11.cpp  present_opengl.cpp
core/include/flcd/: classifier.h  control.h  frame_limiter.h  headroom.h  hooks.h  ipc.h  log.h  overlay.h  profiler.h  remedy.h
core/inject/: dllmain.cpp
core/ipc/: pipe_server.cpp
core/overlay/: overlay_d3d11.cpp
core/profiler/: frame_profiler.cpp
core/remedies/: control.cpp  frame_limiter.cpp
injector/: CMakeLists.txt  inject_main.cpp
nvdrs/: CMakeLists.txt  nvdrs_main.cpp
profiles/: nier-replicant-122.toml  vampyr.toml
tools/: analyze.py  disasm.py  fetch_deps.ps1  gen_forwarders.py  make_proxies.ps1  publish.ps1  xref.py
upscaler/: CMakeLists.txt  upscaler_main.cpp
